2008-02-28  Bastien Nocera  <hadess@hadess.net>

	* daemon/gvfsbackendobexftp-fl-parser.c (fl_parser_start_node_cb):
	Set the content-type on files by having a good guess if we didn't
	get a mime-type from the folder listings

2008-02-27  Benjamin Otte  <otte@gnome.org>

	* programs/gvfs-mount.c: (prompt_for):
	don't mess up my terminal when entering passwords

2008-02-27  Bastien Nocera  <hadess@hadess.net>

	* client/test-uri-utils.c: add test for obex URIs
	* configure.ac: Require expat for the obexftp backend
	* daemon/Makefile.am:
	* daemon/gvfsbackendobexftp-cap-parser.c:
	* daemon/gvfsbackendobexftp-cap-parser.h:
	* daemon/gvfsbackendobexftp-fl-parser.c:
	* daemon/gvfsbackendobexftp-fl-parser.h:
	Added ObexFTP folder listing and capability parser from
	gnome-vfs-obexftp, ported to gio

	* daemon/gvfsbackendobexftp.c:
	* daemon/gvfsbackendobexftp.h:
	* daemon/obexftp-marshal.list:
	* daemon/obexftp.mount.in: Add read-only ObexFTP backend

	(Closes: #509621)

2008-02-27  Luca Ferretti  <elle.uca@libero.it>

	* daemon/gvfsbackendcdda.c: (do_query_info):
	Make "file don't exist" message conform to other backends;
	no, it isn't a string freeze break, the message yet exists
	elsewhere.

2008-02-27  Benjamin Otte  <otte@gnome.org>

	* common/gmountsource.c: (g_mount_source_ask_question_finish):
	Set out parameters for questions, too.

2008-02-27  Benjamin Otte  <otte@gnome.org>

	* common/gmountsource.c: (g_mount_source_ask_password_finish):
	Set out parameters even in error case.

2008-02-26  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsbackenddav.c: (do_delete):
	Correct error domain in case delete failed.

2008-02-26  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsbackenddav.c:
	Redo authentication and implement keyring support. Based
	on a patch by Carlos Garcia Campos.

2008-02-26  Alexander Larsson  <alexl@redhat.com>

        * programs/gvfs-bash-completion.sh:
        * programs/gvfs-ls.c:
	Better completion
